<resources>
    <string name="app_name">骑行里程</string>
    <string name="save">保存</string>
    <string name="expand_desc">展开按钮</string>
    <string name="input_hint">大于0的数字</string>
    <string name="input_title">骑行距离:</string>
    <string name="add_desc">添加按钮</string>
    <string name="meter">米</string>
    <string name="custom">自定义</string>
    <string name="total_distance_title">骑行总里程(单位：公里)：</string>
    <string name="total_distance_title_simple">已骑行</string>
    <string name="km">公里</string>
    <string name="play_card">打卡</string>
    <string name="today_title">今日记录：</string>
    <string name="custom_distance">自定义骑行距离</string>
    <string name="bike_distance">骑行距离：</string>
    <string name="bike">骑行</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="bike_record">骑行记录</string>
</resources>