<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="@dimen/page_padding">

    <LinearLayout
        android:id="@+id/llInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/page_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_v2"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            android:hint="@string/input_title"
            />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/padding_small"
            android:paddingHorizontal="@dimen/padding_small"
            android:background="@null"
            android:textSize="@dimen/text_size_v2"
            android:textColorHint="@color/black_30"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            android:hint="@string/input_hint"
            android:inputType="number"
            />

        <FrameLayout
            android:id="@+id/flExpand"
            android:layout_width="40dp"
            android:layout_height="40dp" >

            <ImageView
                android:id="@+id/ivExpand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand"
                android:contentDescription="@string/expand_desc"
                android:layout_gravity="center"
                />

        </FrameLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider_color"
        android:layout_marginHorizontal="@dimen/page_padding"
        android:layout_marginTop="@dimen/radius_middle"
        android:layout_marginBottom="@dimen/page_padding"
        app:layout_constraintTop_toBottomOf="@id/llInput"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/page_padding"
        app:layout_constraintBottom_toBottomOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginHorizontal="@dimen/page_padding"
        android:elevation="2dp"
        android:gravity="center"
        android:textSize="@dimen/text_size_v1"
        android:textColor="@color/white"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>